county/state analysis and figures updates, new RMD for county public figures

--- a/MCCHD_public_figures.Rmd
+++ b/MCCHD_public_figures.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Missoula County COVID-19 Cases"
+title: "Missoula County COVID-19 Report"
 author: "Ethan Walker, University of Montana"
 date: "Data as of October 8, 2020"
 output: pdf_document
@@ -47,14 +47,6 @@ file_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
 
 covid_data <- read_rds(paste0(input_path, "covid_data_clean.rds")) 
-
-summary_data <- covid_data %>% 
-   mutate(month_of_year = month(symptom_onset_date_new, label = TRUE)) %>% 
-   filter(month_of_year == "Sep") %>% 
-   #group_by(age_group3) %>% 
-   count()
-#summary_data
-
 ```
 
 
@@ -318,70 +310,6 @@ age_count_month_plot
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(is.na(age_group3) | is.na(test_date_new))
-age_na <- sum(age_n$case)
-
-# Age group line plot - counts by month
-age_count_month_plot2 <- covid_data %>% 
-   filter(test_date_new > "2020-08-01") %>% 
-   mutate(month_of_year = month(test_date_new, label = TRUE)) %>% 
-   mutate(week_of_year = cut.Date(test_date_new, breaks = "1 week", start.on.monday = FALSE),
-          week_of_year = ymd(week_of_year)) %>% 
-   group_by(age_group3, week_of_year) %>% 
-   mutate(group_cases = n()) %>% 
-   filter(!is.na(age_group3)) %>% 
-   filter(!is.na(week_of_year)) %>% 
-   distinct(age_group3, week_of_year, .keep_all = TRUE) %>% 
-   ggplot() +
-      geom_rect(aes(xmin = Sys.Date() - 14, xmax = Sys.Date(), ymin=0, ymax=Inf),
-               fill = "gray80", alpha = 0.05) +
-      geom_line(aes(week_of_year, group_cases, group = age_group3, 
-                    color = age_group3), size = 1.5) +
-      geom_label(aes(x = Sys.Date()-7, y = 75, 
-                    label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
-                fill = NA) +
-      theme_minimal() +
-      labs(title = "Weekly COVID-19 cases by age group",
-        subtitle = paste0("Missoula County, 2020. Data incomplete for ", age_na, " cases."),
-        color = "Age group") +
-      ylab("Number of cases per week") +
-      xlab("") +
-      scale_x_date(breaks = seq.Date(from = as.Date("2020-08-02"), 
-                                    to = as.Date(Sys.Date()), 
-                                    by = "7 days"),
-                  labels = seq.Date(from = as.Date("2020-08-02"), 
-                                    to = as.Date(Sys.Date()), 
-                                    by = "7 days"),
-                  date_labels = "%d-%b") +
-      scale_y_continuous(breaks = c(seq(0, 200, 10)), labels = c(seq(0, 200, 10))) +
-      theme(strip.text = element_text(size = 16, colour = "black"),
-         title = element_text(size = 18, colour = "black"),
-         panel.grid = element_blank(),
-         panel.grid.major.y = element_line(colour = "grey"),
-         axis.text.x = element_text(size = 16, colour = "black", 
-                                    angle = 90, vjust = 0.4),
-         axis.text.y = element_text(size = 16, colour = "black"),
-         legend.text = element_text(size = 16, colour = "black"),
-         axis.title.y = element_text(size = 16, colour = "black",
-                                     margin = unit(c(0, 5, 0, 0), "mm")),
-         axis.title.x = element_text(size = 16, colour = "black",
-                                     margin = unit(c(5, 0, 0, 0), "mm")),
-         axis.line.x = element_blank(), 
-         axis.line.y = element_blank(), 
-         axis.ticks = element_blank()) +
-   scale_color_manual(values = colorblind_palette)
-
-age_count_month_plot2
-
-#table(age_count_month_plot2$month_of_year, age_count_month_plot2$age_group3)
-
-#ggsave("C:/R/covid19/age_count_month_plot2.png", width = 10, height = 6)
-```
-
-\pagebreak  
-
-```{r}
-age_n <- covid_data %>% 
    filter(is.na(age_group))
 age_na <- sum(age_n$case)
 
@@ -486,77 +414,6 @@ age_incidence_plot_line <- covid_data %>%
 age_incidence_plot_line
 
 #ggsave("C:/R/covid19/age_incidence_plot_line.png", width = 10, height = 6)
-```
-
-\pagebreak  
-
-```{r}
-race_n <- covid_data %>% 
-   filter(is.na(race))
-race_na <- sum(race_n$case)
-
-#Bar plot of race count data
-race_plot_count <- covid_data %>% 
-   filter(!is.na(race)) %>% 
-   ggplot() +   
-     geom_bar(aes(x = fct_rev(race)), fill = "steelblue", width = .6) +   
-     labs(title = "COVID-19 cases by self-reported race",
-          subtitle = paste0("Missoula County. Data incomplete for ", race_na, " cases."),
-          y = "Count", x = "", fill = "") +
-     scale_y_continuous(breaks = c(seq(0, 1000, 50)), labels = c(seq(0, 1000, 50))) +
-     coord_flip() +
-     theme_minimal() +
-     theme(strip.text = element_text(size = 16, colour = "black"),
-           title = element_text(size = 18, colour = "black"),
-           panel.grid = element_blank(),
-           axis.text.x = element_text(size = 14, colour = "black", 
-                                     angle = 45, vjust = 0.75, hjust = 0.9),
-           legend.text = element_text(size = 16, colour = "black"),
-           legend.title = element_text(size = 16, colour = "black"),
-           axis.text.y = element_text(size = 16, colour = "black"),
-           axis.title.y = element_text(size = 16, colour = "white"),
-           axis.title.x = element_blank(),
-           axis.line.x = element_line(colour = "black", size = 1.2), 
-           axis.line.y = element_line(colour = "black", size = 1.2), 
-           axis.ticks = element_line(colour = "black")) + 
-     scale_fill_manual(values = colorblind_palette)
-race_plot_count
-
-#ggsave("race_plot_count.jpg", width = 10, height = 5)
-```
-
-\pagebreak  
-
-```{r}
-#Bar plot of race incidence data
-race_incidence_plot <- race_incidence %>% 
-   filter(region == "Missoula County") %>% 
-   ggplot() +
-     geom_col(aes(fct_rev(race), group_inc), fill = "steelblue", width = .6) +
-     coord_flip() +
-     labs(title = "COVID-19 incidence by self-reported race",
-          subtitle = paste0("Missoula County. Data incomplete for ", race_na, " cases."),
-          y = "Incidence per 100,000 Population", x = "") +
-     scale_y_continuous(breaks = c(seq(0, 10000, 500)), labels = c(seq(0, 10000, 500))) +
-     theme_minimal() +
-     theme(strip.text = element_text(size = 16, colour = "black"),
-           title = element_text(size = 18, colour = "black"),
-           panel.grid = element_blank(),
-           axis.text.x = element_text(size = 14, colour = "black", 
-                                     angle = 45, vjust = 0.75, hjust = 0.9),
-           legend.text = element_text(size = 16, colour = "black"),
-           legend.title = element_text(size = 16, colour = "black"),
-           axis.text.y = element_text(size = 16, colour = "black"),
-           axis.title.y = element_text(size = 14, colour = "black",
-                                       margin = unit(c(0, 5, 0, 0), "mm")),
-           axis.title.x = element_text(size = 14, colour = "black",
-                                       margin = unit(c(5, 0, 0, 0), "mm")),
-           axis.line.x = element_line(colour = "black", size = 1.2), 
-           axis.line.y = element_line(colour = "black", size = 1.2), 
-           axis.ticks = element_line(colour = "black"))
-race_incidence_plot
-
-#ggsave("race_incidence_plot.jpg", width = 10, height = 5)
 ```
 
 \pagebreak  
@@ -780,88 +637,6 @@ covid_piechart
 piechart_function(plot_fill = "number_contacts_categorical", var_label = "Number of contacts - all cases")
 
 #ggsave("piechart_contacts.jpg", width = 10, height = 5)
-```
-
-\pagebreak  
-
-```{r}
-# Table with summary stats on number of contacts per case
-sum_nums <- covid_data %>% 
-   rename("Age group" = age_group) %>% 
-   group_by(`Age group`) %>% 
-   filter(!is.na(`Age group`)) %>% 
-   summarize("Mean # contacts" = round(mean(number_contacts, na.rm = TRUE), digits = 1),
-             "Std dev" = round(sd(number_contacts, na.rm = TRUE), digits = 1),
-             "Min # contacts" = round(min(number_contacts, na.rm = TRUE), digits = 1),
-             "Median # contacts" = round(median(number_contacts, na.rm = TRUE), digits = 1),
-             "Max # contacts" = round(max(number_contacts, na.rm = TRUE), digits = 1)) 
-
-kable(sum_nums, caption = "Number of contacts by age group, Missoula County",
-      format = "latex", align = "c") %>% 
-   kable_styling(font_size = 10) %>% 
-   row_spec(0, bold = TRUE, font_size = 10)
-```
-
-\clearpage
-
-```{r}
-age_n <- covid_data %>% 
-   filter(is.na(age_group) | is.na(test_date_new))
-age_na <- sum(age_n$case)
-
-# Line plot of number of contacts per age group by month
-contacts_age_plot <- covid_data %>% 
-   filter(test_date_new > "2020-08-01") %>% 
-   mutate(month_of_year = month(test_date_new, label = TRUE)) %>% 
-   mutate(week_of_year = cut.Date(test_date_new, breaks = "1 week", start.on.monday = FALSE),
-          week_of_year = ymd(week_of_year)) %>% 
-   group_by(age_group, week_of_year) %>% 
-   mutate(mean_contacts = mean(number_contacts, na.rm = TRUE)) %>% 
-   filter(!is.na(age_group)) %>% 
-   filter(!is.na(week_of_year)) %>% 
-   distinct(age_group, week_of_year, .keep_all = TRUE) %>% 
-   ggplot() +
-      geom_rect(aes(xmin = Sys.Date() - 14, xmax = Sys.Date(), ymin=0, ymax=Inf),
-               fill = "gray80", alpha = 0.05) +
-      geom_label(aes(x = Sys.Date()-7, y = 15, 
-                    label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
-                fill = NA) +
-      geom_line(aes(week_of_year, mean_contacts, group = age_group, 
-                    color = age_group), size = 1.5) +
-      theme_minimal() +
-      labs(title = "Mean number of contacts per COVID case, by week",
-        subtitle = paste0("Missoula County, 2020. Data incomplete for ", age_na, " cases."),
-        color = "Age group") +
-      ylab("Mean # contacts") +
-      xlab("") +
-      scale_x_date(breaks = seq.Date(from = as.Date("2020-08-02"), 
-                                    to = as.Date(Sys.Date()), 
-                                    by = "7 days"),
-                  labels = seq.Date(from = as.Date("2020-08-02"), 
-                                    to = as.Date(Sys.Date()), 
-                                    by = "7 days"),
-                  date_labels = "%d-%b") +
-      scale_y_continuous(breaks = c(seq(0, 25, 5)), labels = c(seq(0, 25, 5))) +
-      theme(strip.text = element_text(size = 16, colour = "black"),
-         title = element_text(size = 18, colour = "black"),
-         panel.grid = element_blank(),
-         panel.grid.major.y = element_line(colour = "grey"),
-         axis.text.x = element_text(size = 16, colour = "black", 
-                                    angle = 90, vjust = 0.4),
-         axis.text.y = element_text(size = 16, colour = "black"),
-         legend.text = element_text(size = 16, colour = "black"),
-         axis.title.y = element_text(size = 16, colour = "black",
-                                     margin = unit(c(0, 5, 0, 0), "mm")),
-         axis.title.x = element_text(size = 16, colour = "black",
-                                     margin = unit(c(5, 0, 0, 0), "mm")),
-         axis.line.x = element_blank(), 
-         axis.line.y = element_blank(), 
-         axis.ticks = element_blank()) +
-   scale_color_manual(values = colorblind_palette)
-
-contacts_age_plot
-
-#ggsave("C:/R/covid19/contacts_age_plot.png", width = 10, height = 6)
 ```
 
 \pagebreak  
@@ -1182,278 +957,4 @@ epi_curve_onset
 #ggsave("epi_curve_onset.jpg", width = 10, height = 5)
 ```
 
-
-
-
-
-```{r, include=FALSE, eval=FALSE}
-############### Older plots included here for future reference #########################
-
-# Travel and previous contact
-covid_data_table <- covid_data %>% 
-   mutate(contact_with_case = as.character(contact_with_case),
-          contact_with_case = if_else(contact_with_case == "No",
-                                      "Unknown", contact_with_case))
-
-save_table <- data.frame(table(covid_data_table$travel_hx, covid_data_table$contact_with_case))
-
-plot_table <- save_table %>% 
-   mutate(Var1 = as.character(Var1),
-          Var2 = as.character(Var2)) %>% 
-   mutate(spread_method = if_else(Var1 == "Yes" & Var2 == "Yes", 
-                                  "Traveled/known contact with case", "Other"),
-          spread_method = if_else(Var1 == "No" & Var2 == "Yes", 
-                                  "No travel/known contact with case", spread_method),
-          spread_method = if_else(Var1 == "Yes" & Var2 == "Unknown", 
-                                  "Traveled/unknown contact", spread_method),
-          spread_method = if_else(Var1 == "No" & Var2 == "Unknown", 
-                                  "No travel/unknown contact", spread_method)) %>% 
-   mutate(total_n = sum(Freq),
-          group_percent = round(Freq/total_n*100, digits = 0)) 
-   
-
-covid_piechart <- plot_table %>% 
-   ggplot(aes("", Freq, fill = spread_method)) +
-     geom_bar(stat = "identity", color = "black", width = 1) +
-     coord_polar("y") +
-     geom_text(aes(label = Freq), 
-               position = position_stack(vjust = 0.5),
-               color = "white", size = 6) +
-     labs(title = "MCCHD COVID-19 infections", fill = "",
-          subtitle = "Travel and contact with known cases (n)") + 
-     theme_void() +
-     theme(title = element_text(size = 16, colour = "black"),
-           legend.text = element_text(size = 16, colour = "black"),
-           legend.title = element_text(size = 16, colour = "black")) +
-           scale_fill_manual(values = cbPalette)
-covid_piechart
-
-#ggsave("piechart_comm_spread.jpg", width = 10, height = 5)
-```
-
-
-```{r, include=FALSE, eval=FALSE}
-# Hospitalized and ventilated
-covid_data_table <- covid_data %>% 
-   mutate(ventilated2 = as.character(ventilated)) %>% 
-   mutate(ventilated2 = if_else(hospitalized == "No" & ventilated2 == "No", 
-                               "NA", ventilated2)) %>% 
-   replace_with_na(replace = list(ventilated2 = "NA")) %>% 
-   mutate(ventilated2 = if_else(is.na(ventilated2) & hospitalized == "No", 
-                                "Not hospitalized", ventilated2)) %>% 
-   mutate(ventilated2 = if_else(is.na(ventilated2) & hospitalized == "Yes", 
-                               "No", ventilated2))
-   
-
-save_table <- data.frame(table(covid_data_table$hospitalized, 
-                               covid_data_table$ventilated2)) %>% 
-   filter(Freq > 0)
-
-plot_table <- save_table %>% 
-   mutate(Var1 = as.character(Var1),
-          Var2 = as.character(Var2)) %>% 
-   mutate(hospitalized = if_else(Var1 == "Yes" & Var2 == "Yes", 
-                                  "Hospitalized/ventilated", "Not hospitalized"),
-          hospitalized = if_else(Var1 == "Yes" & Var2 == "No", 
-                                  "Hospitalized/not ventilated", hospitalized)) %>% 
-   mutate(total_n = sum(Freq),
-          group_percent = round(Freq/total_n*100, digits = 0))
-   
-
-covid_piechart <- plot_table %>% 
-   ggplot(aes("", Freq, fill = hospitalized)) +
-     geom_bar(stat = "identity", color = "black", width = 1) +
-     coord_polar("y") +
-     geom_text(aes(label = Freq), 
-               position = position_stack(vjust = 0.5),
-               color = "white", size = 6) +
-     labs(title = "MCCHD COVID-19 infections", fill = "",
-          subtitle = "Hospitalized cases with ventilators (n)") + 
-     theme_void() +
-     theme(title = element_text(size = 16, colour = "black"),
-           legend.text = element_text(size = 16, colour = "black"),
-           legend.title = element_text(size = 16, colour = "black")) +
-           scale_fill_manual(values = cbPalette)
-covid_piechart
-
-#ggsave("piechart_hosp_vent.jpg", width = 10, height = 5)
-```
- 
-
-```{r, include=FALSE, eval=FALSE}
-# Hospitalized and chronic conditions
-save_table <- data.frame(table(covid_data_table$hospitalized, 
-                               covid_data_table$chronic_conditions))
-
-plot_table <- save_table %>% 
-   mutate(Var1 = as.character(Var1),
-          Var2 = as.character(Var2)) %>% 
-   mutate(hospitalized = if_else(Var1 == "Yes" & Var2 == "Yes", 
-                                  "Hospitalized/chronic condition", "Other"),
-          hospitalized = if_else(Var1 == "Yes" & Var2 == "No", 
-                                  "Hospitalized/no chronic condition", hospitalized),
-          hospitalized = if_else(Var1 == "No" & Var2 == "Yes", 
-                                  "Not hospitalized/chronic condition", hospitalized),
-          hospitalized = if_else(Var1 == "No" & Var2 == "No", 
-                                  "Not hospitalized/no chronic condition", hospitalized)) %>% 
-   mutate(total_n = sum(Freq),
-          group_percent = round(Freq/total_n*100, digits = 0))
-   
-
-covid_piechart <- plot_table %>% 
-   ggplot(aes("", Freq, fill = hospitalized)) +
-     geom_bar(stat = "identity", color = "black", width = 1) +
-     coord_polar("y") +
-     geom_text(aes(label = Freq), 
-               position = position_stack(vjust = 0.5),
-               color = "white", size = 6) +
-     labs(title = "MCCHD COVID-19 infections", fill = "",
-          subtitle = "Hospitalized cases with chronic conditions (n)") + 
-     theme_void() +
-     theme(title = element_text(size = 16, colour = "black"),
-           legend.text = element_text(size = 16, colour = "black"),
-           legend.title = element_text(size = 16, colour = "black")) +
-           scale_fill_manual(values = cbPalette)
-covid_piechart
-
-#ggsave("piechart_hosp_chronic.jpg", width = 10, height = 5)
-```
-
-
-```{r}
-#piechart_function(plot_fill = "community_spread_new", var_label = "Community Spread - All Cases")
-
-#ggsave("piechart_comm_spread.jpg", width = 10, height = 5)
-```
-
-
-```{r}
-#piechart_function(plot_fill = "gender", var_label = "Gender - All Cases")
-
-#ggsave("piechart_gender.jpg", width = 10, height = 5)
-```
-
-
-```{r, include=FALSE, eval=FALSE}
-## Missoula county R results using state data
-## Using State data to be able to incorporate local vs imported cases
-## Only updates once per week
-
-case_data <- read_xlsx(paste0(file_path, "Input/SI_Local_v_Import Data_10.07.2020.xlsx"),
-                                 sheet = 2) %>% 
-   rename_all(tolower) %>% 
-   select(-case_no) %>% 
-   rownames_to_column(var = "case_no") %>% 
-   mutate(local = if_else(local_import == 0, 1, 0),
-          imported = local_import,
-          date_reported = ymd(date_reported),
-          dates = as.Date(symptom_onset_date),
-          dates = ymd(dates),
-          case = 1) %>% 
-   filter(!is.na(dates)) %>% 
-   filter(county == "Missoula") %>% 
-   filter(dates > "2020-05-30" & dates < Sys.Date() - 13) %>% 
-   arrange(dates) %>% 
-   ungroup() %>% 
-   select(dates, local, imported) %>% 
-   group_by(dates) %>% 
-   mutate(local = sum(local),
-          imported = sum(imported)) %>% 
-   distinct(dates, .keep_all = TRUE) %>% 
-   arrange(dates)
-
-
-case_data_2 <- case_data %>% 
-   mutate(I = local + imported) %>% 
-   select(dates, I) 
-
-# Change latest_date depending on day of week
-# Use -14 for Thurs reports with new data
-# Use -18 for Mon reports with older data
-latest_date <- format(Sys.Date() - 14, "%Y-%m-%d")
-
-incidence_data <- incidence(case_data_2$dates, last_date = latest_date)
-
-li_inc_data <- as.data.frame(incidence_data$dates) %>% 
-   mutate(dates = ymd(incidence_data$dates)) %>% 
-   select(dates) %>% 
-   left_join(case_data, by = "dates") %>% 
-   mutate(local = if_else(is.na(local), 0, local),
-          imported = if_else(is.na(imported), 0, imported))
-
-
-# Set dates for 14-day rolling averages
-missoula_n <- as.data.frame(li_inc_data$dates)
-time_var <- nrow(missoula_n)
-time_start <- seq(2, time_var-13)
-time_end <- time_start + 13
-
-
-# Serial Interval derived from State of Montana paired case data
-serial_interval_mean <- 6.3
-serial_interval_sd <- 5.4
-
-r_results <- estimate_R(li_inc_data, method="parametric_si", 
-                           config = make_config(list(mean_si = serial_interval_mean, 
-                                                     std_si = serial_interval_sd,
-                                                     t_start =  time_start,
-                                                     t_end = time_end)))
-
-# Format and save analysis results
-colomns <- c(1:4, 8)
-missoula_r <- (r_results$R[,colomns]) %>% 
-   mutate(region = "Missoula County") %>% 
-   rename(mean_r = `Mean(R)`,
-          sd_r = `Std(R)`,
-          median_r = `Median(R)`)
-
-missoula_dates <- as.data.frame(r_results$dates)
-missoula_i <- as.data.frame(r_results$I)
-missoula_cil <- as.data.frame(r_results$R$`Quantile.0.025(R)`)
-missoula_cih <- as.data.frame(r_results$R$`Quantile.0.975(R)`)
-missoula_dates_new <- cbind(missoula_dates, missoula_i) %>% 
-   rename(dates = 1,
-          incidence = 2) %>% 
-   mutate(dates = ymd(dates))
-missoula_dates_new <- missoula_dates_new[-(1:14), 1:2]
-missoula_dates_new <- cbind(missoula_dates_new, missoula_cil, missoula_cih) %>% 
-   rename(cl_low = 3,
-          cl_high = 4)
-missoula_r <- cbind(missoula_r, missoula_dates_new)
-
-
-missoula_r_plot <- missoula_r %>% 
-   filter(dates > "2020-07-01") %>% 
-   ggplot() +
-   geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
-   #geom_line(aes(dates, cl_low), size = 1.5, color = "grey") +
-   #geom_line(aes(dates, cl_high), size = 1.5, color = "grey") +
-   labs(title = "COVID-19 Rolling 14-day R-number, Missoula County",
-        color = "") +
-   ylab("R-number") +
-   xlab("") +
-   geom_hline(yintercept = 1, color = "red", size = 1.2) +
-   scale_x_date(date_breaks = "3 days", date_labels = "%d-%b") +
-   scale_y_continuous(breaks = seq(0, 2, 0.1), labels = seq(0, 2, 0.1)) +
-   theme_minimal() +
-   theme(strip.text = element_text(size = 16, colour = "black"),
-         title = element_text(size = 18, colour = "black"),
-         panel.grid = element_blank(),
-         panel.grid.major.y = element_line(colour = "grey"),
-         axis.text.x = element_text(size = 16, colour = "black", 
-                                    angle = 90, vjust = 0.4),
-         axis.text.y = element_text(size = 16, colour = "black"),
-         legend.text = element_text(size = 16, colour = "black"),
-         axis.title.y = element_text(size = 16, colour = "black",
-                                     margin = unit(c(0, 5, 0, 0), "mm")),
-         axis.title.x = element_text(size = 16, colour = "black",
-                                     margin = unit(c(5, 0, 0, 0), "mm")),
-         axis.line.x = element_blank(), 
-         axis.line.y = element_blank(), 
-         axis.ticks = element_blank()) +
-   scale_color_manual(values = c("black")) 
-missoula_r_plot
-
-#ggsave("C:/R/covid19/missoula_r_plot.png", width = 10, height = 6)
-```
 
